main/usb-modeswitch: add missing tcl dependency
The usb-modeswitch-udev subpackage comes with a tclsh script,
usb_modeswitch_dispatcher, but missing a dependency on the 'tcl'
package which provides tclsh. Without the dependency, modeswitch
will not occur on udev events.

--- a/main/usb-modeswitch/APKBUILD
+++ b/main/usb-modeswitch/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=usb-modeswitch
 pkgver=2.6.0
-pkgrel=0
+pkgrel=1
 _pkgdata=20170806
 pkgdesc="A mode switching tool for controlling flip flop (multiple device) USB gear"
 url="http://www.draisberghof.de/usb_modeswitch/"
@@ -39,7 +39,7 @@ package() {
 
 udev() {
 	pkgdesc="udev support for usb-modeswitch"
-	depends="eudev $pkgname=$pkgver-r$pkgrel"
+	depends="eudev tcl $pkgname=$pkgver-r$pkgrel"
 	mkdir -p "$subpkgdir"/usr/sbin
 	mv "$pkgdir"/lib "$subpkgdir"/
 	mv "$pkgdir"/usr/sbin/usb_modeswitch_dispatcher \
