--- a/testing/py3-scrapy/APKBUILD
+++ b/testing/py3-scrapy/APKBUILD
@@ -3,12 +3,12 @@
 # Used https://aur.archlinux.org/packages/sc/scrapy/PKGBUILD as template
 pkgname=py3-scrapy
 _pkgname=Scrapy
-pkgver=1.8.0
+pkgver=2.0.0
 pkgrel=0
 pkgdesc="A fast high-level scraping and web crawling framework."
 url="https://scrapy.org/"
 arch="noarch"
-license="BSD"
+license="BSD-3-Clause"
 depends="python3 py3-w3lib py3-queuelib py3-openssl py3-cssselect
 	py3-six py3-parsel py3-pydispatcher py3-service_identity py3-lxml
 	py3-twisted"
@@ -26,4 +26,4 @@ build() {
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
-sha512sums="fcc988cee171a8134ff8a6cd2655d715942fb9e720a070654bc634863e444f121e990910a0c1377e3b4679d496610267cc43eb907b8cf27d0623053c66ff26b9  Scrapy-1.8.0.tar.gz"
+sha512sums="f5a799c525b83ba2246ba3aa4ee25d600d2f3cd3920f02d5400ff752cce980b57d74dabfe351e7f566d40b248a1f8f2438f6d354146d7ebb738ad4bf0c31b948  Scrapy-2.0.0.tar.gz"
