community/py3-parso: upgrade to 0.6.2
Closes !4984

--- a/community/py3-parso/APKBUILD
+++ b/community/py3-parso/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Kevin Daudt <kdaudt@alpinelinux.org>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=py3-parso
-pkgver=0.6.1
+pkgver=0.6.2
 pkgrel=0
 pkgdesc="Python3 parser that supports error recovery and round-trip parsing for different Python versions"
 url="https://github.com/davidhalter/parso"
@@ -10,7 +10,10 @@ license="MIT"
 depends="python3"
 makedepends="py3-setuptools"
 checkdepends="py3-pytest"
-source="https://files.pythonhosted.org/packages/source/p/parso/parso-$pkgver.tar.gz"
+source="
+	https://files.pythonhosted.org/packages/source/p/parso/parso-$pkgver.tar.gz
+	fix-python-3.8.2.patch
+	"
 builddir="$srcdir/parso-$pkgver"
 
 replaces="py-parso" # Backwards compatibility
@@ -28,4 +31,5 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="6c7043f1fc8a05e176794e0e7b114b22b333d9d7eb8121d34e9767124c153f663cd8a8be4b02799eac31c2d502971167d1df6dd465b306131c4cc63d05626f96  parso-0.6.1.tar.gz"
+sha512sums="00856f5756f0c7ba9935f0d31a80e1eef3cc0eee8e71c38dd1500d9b64b57cd8c8f3f2adf000e4d514ba30012ffd8c0d05eb9875f1444d6c0099e36624fb4f53  parso-0.6.2.tar.gz
+a08c3410fe6303bcbd202aa454785df9a636fbae3c26e5f160a670327d577e4e2a478e426491643a75180f8c0e103a764defda41231bc2b8ed0e5036dcfb6392  fix-python-3.8.2.patch"
