--- a/community/xbps/APKBUILD
+++ b/community/xbps/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: André Klitzing <aklitzing@gmail.com>
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=xbps
-pkgver=0.58
+pkgver=0.59
 pkgrel=0
 pkgdesc="The X Binary Package System"
 arch="all"
@@ -9,9 +9,12 @@ url="https://github.com/voidlinux/xbps"
 license="BSD-2-Clause AND (BSD-3-Clause AND ISC AND BSD-2-Clause-NetBSD)"
 depends="ca-certificates"
 makedepends="zlib-dev libarchive-dev openssl-dev"
-subpackages="$pkgname-dev $pkgname-doc
+subpackages="
+	$pkgname-dev
+	$pkgname-doc
 	$pkgname-bash-completion:bashcomp:noarch
-	$pkgname-zsh-completion:zshcomp:noarch"
+	$pkgname-zsh-completion:zshcomp:noarch
+	"
 options="!check"
 source="$pkgname-$pkgver.tar.gz::https://github.com/void-linux/xbps/archive/$pkgver.tar.gz"
 
@@ -24,7 +27,9 @@ build() {
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--bindir=/usr/bin \
-		--localstatedir=/var/lib/xbps
+		--localstatedir=/var/lib/xbps \
+		--enable-lto
+	sed 's|-O2|-Os|g' config.mk
 	make
 }
 
@@ -55,4 +60,4 @@ _submv() {
 	mv "$pkgdir"/$path "$subpkgdir"/${path%/*}/
 }
 
-sha512sums="c4df413043aabb17ef9a21cbb58aa116d63d50ed2bcae7a38886ed077fcc72e3f4cbe9723e97b741b3c9403f836ac5edaea86092a7cd44ac29015c1bed483952  xbps-0.58.tar.gz"
+sha512sums="31da8d03101c95672fef77f85d5f8ce34dcb3f8cebf1e22fbc34fb25266e524862e52c9d580831c1106e5f0f72627a40bc202dcf06ef5553a43e5f75129615a0  xbps-0.59.tar.gz"
