community/latte-dock: upgrade to 0.9.9

--- a/community/latte-dock/APKBUILD
+++ b/community/latte-dock/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=latte-dock
-pkgver=0.9.8.1
-pkgrel=1
+pkgver=0.9.9
+pkgrel=0
 arch="all !armhf !s390x" # blocked by plasma-desktop
 url="https://store.kde.org/p/1169519/"
 pkgdesc="A dock based on Plasma Frameworks"
@@ -16,19 +16,12 @@ makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtdeclarative-dev libksysgua
 source="https://download.kde.org/stable/latte-dock/latte-dock-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -37,8 +30,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="64676084edb930a5e325a5b41a9d909111dee3cdfd6416ecc7909e8837620bfd578988d586882040097d09655c8dd021fadccee859179b98193de23344d5b7b3  latte-dock-0.9.8.1.tar.xz"
+sha512sums="87ab7234b497517a5cf31254a0c29ce015080c2b2e10ada84ef953a18009282965eab443692a6cdc6bd7a4e09199f6fc2962637f7d492df8cc8e196aa78dcff0  latte-dock-0.9.9.tar.xz"
