community/dtools: add missing dustmite subpkg

--- a/community/dtools/APKBUILD
+++ b/community/dtools/APKBUILD
@@ -10,13 +10,13 @@
 # so it is excluded from this package.
 pkgname=dtools
 pkgver=2.090.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Ancillary tools for the D programming language compiler"
 url="https://github.com/dlang/tools"
 arch="x86_64"
 license="BSL-1.0"
 makedepends="ldc"
-subpackages="$pkgname-ddemangle $pkgname-rdmd"
+subpackages="$pkgname-ddemangle $pkgname-rdmd $pkgname-dustmite"
 source="tools-$pkgver.tar.gz::https://github.com/dlang/tools/archive/v$pkgver.tar.gz"
 builddir="$srcdir/tools-$pkgver/"
 _outputdir="$builddir/alpine-build/"
