main/lua-socket: modernize

--- a/main/lua-socket/APKBUILD
+++ b/main/lua-socket/APKBUILD
@@ -11,10 +11,6 @@ pkgdesc="Networking library for Lua"
 url="http://luaforge.net/projects/luasocket/"
 arch="all"
 license="MIT"
-install=""
-depends=""
-makedepends=""
-subpackages=""
 for _i in $_luaversions; do
 	makedepends="$makedepends lua$_i-dev"
 	subpackages="$subpackages lua$_i-socket:split_${_i/./_}"
@@ -38,7 +34,7 @@ prepare() {
 build() {
 	for _i in $_luaversions; do
 		make -C "$srcdir"/build-$_i/src  LUAV=$_i \
-			all-unix || return 1
+			all-unix
 	done
 }
 
@@ -46,7 +42,7 @@ package() {
 	for _i in $_luaversions; do
 		cd "$srcdir"/build-$_i
 		make prefix=/usr DESTDIR="$pkgdir" LUAV=$_i \
-			install-unix || return 1
+			install-unix
 	done
 }
 
@@ -57,7 +53,7 @@ _split() {
 	for d in usr/lib/lua usr/share/lua; do
 		if [ -d "$pkgdir"/$d/$_ver ]; then
 			mkdir -p "$subpkgdir"/$d
-			mv "$pkgdir"/$d/$_ver "$subpkgdir"/$d/ || return 1
+			mv "$pkgdir"/$d/$_ver "$subpkgdir"/$d/
 		fi
 	done
 }
