--- a/community/libreswan/APKBUILD
+++ b/community/libreswan/APKBUILD
@@ -1,7 +1,6 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
-
 pkgname=libreswan
-pkgver=3.30
+pkgver=3.31
 pkgrel=0
 pkgdesc="IPsec implementation for Linux"
 url="https://libreswan.org"
@@ -13,7 +12,7 @@ makedepends="bison flex coreutils bash xmlto
 	gmp-dev linux-pam-dev nss-dev unbound-dev libcap-ng-dev
 	curl-dev nspr-dev bsd-compat-headers ldns-dev
 	"
-subpackages="$pkgname-doc"
+subpackages="$pkgname-doc $pkgname-openrc"
 source="https://download.libreswan.org/libreswan-$pkgver.tar.gz
 	fix-includes.patch
 
@@ -45,6 +44,6 @@ package() {
 		FINALLIBEXECDIR=/usr/libexec/ipsec \
 		install
 }
-sha512sums="1ea3505938231bacb762ec13c278b584239660e20994030423f0200ff32fcc0f0a0c74649b1470bbfc1165a762d3b60d0b1c5c56bff81a52415c7666736b5b99  libreswan-3.30.tar.gz
+sha512sums="edaddeb209c4fb974b16790ba843a41f4f1d269dd28333aa02b820801a222435c2ca5622e77558d1e95970b4ef24a663d9c44ef4ede7ff4e66e1f0d9b6e880d2  libreswan-3.31.tar.gz
 df503e349661a029f8f6569ea65b4ecceb67f18c0a133d4818d390c0e6e719c2c793c483881778685f1eedaa210ea815ae4f77a94fa84a1acb63a9ad5e8db501  fix-includes.patch
 36415fae9b6674d66b7728fbc1df4bb3c4fcb16f0bbe88ead1f23e553bb51a9deb288a8659a0050a3fb1e14c3dbb8fb8524e9ef48fb6842dc94b11b758349c58  Makefile.inc.local"
