--- a/community/fwupd/APKBUILD
+++ b/community/fwupd/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Timo Teräs <timo.teras@iki.fi>
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=fwupd
-pkgver=1.3.8
-pkgrel=1
+pkgver=1.3.9
+pkgrel=0
 pkgdesc="Firmware update daemon"
 url="https://fwupd.org/"
 arch="x86_64 x86"
@@ -16,7 +16,13 @@ makedepends="meson help2man linux-headers gnutls-utils
 	efivar-dev elfutils-dev gnu-efi-dev libsmbios-dev tpm2-tss-dev
 	"
 checkdepends="bubblewrap"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-openrc"
+subpackages="
+	$pkgname-dev
+	$pkgname-doc
+	$pkgname-lang
+	$pkgname-openrc
+	$pkgname-fish-completion:fishcomp:noarch
+	"
 source="fwupd-$pkgver.tar.gz::https://github.com/hughsie/fwupd/archive/$pkgver.tar.gz
 	$pkgname.initd
 	fix-version.patch
@@ -66,10 +72,22 @@ check() {
 
 package() {
 	DESTDIR="$pkgdir" ninja -C output install
+
 	install -Dm755 "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
+
+	mkdir -p "$pkgdir"/usr/share/fish
+	mv "$pkgdir"/usr/share/fish/vendor_completions.d "$pkgdir"/usr/share/fish/completions
 }
 
-sha512sums="0f0aa380adc5e167e49db4261b50bee9c905786afcd44b5fe221f42a77306219d40888989e0b16448535eaf077baed12de56b6cca42f91fca09c4a8384f243e4  fwupd-1.3.8.tar.gz
+fishcomp() {
+	depends=""
+	pkgdesc="Fish completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel fish"
+
+	amove usr/share/fish/completions
+}
+
+sha512sums="b81ef1f683082e4c49ab8acd8848118fed1383d4e3e73967daaa68927e553a5bc4973004d3dd26b268b901c5deb1f9238a98537d24cfd957162f508c9622e1e4  fwupd-1.3.9.tar.gz
 ad569d342cf14290d4924582af92c7d634139cf04eb1d981b4a4573ed56a8f9115914adefa925c8486e1126dd4fbed36a786aad4afd07de14dd6cbdf7982b766  fwupd.initd
 9ca5b469d6e5ae13c43bff6496a0781b53b1d870ef0492553d2244213cb695a095befb3586baefb68466b4897ddd18136f785d8de1c489ac1148558d49e9674e  fix-version.patch
 4a5cc7cb87b91345ad98e11ebbc67e0e8c1b124e7e01376f58886a0858cc68ef96f8edc46a41793f407821d2d5c9e91f7a962d4149732e803f6dde579a8c1b3b  fix-lib64-bubblewrap-bind.patch"
