--- a/testing/k3s/APKBUILD
+++ b/testing/k3s/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=k3s
-_pkgver=1.17.0+k3s.1
-pkgver=${_pkgver/+k3s/}
+_pkgver=1.17.3+k3s1
+pkgver=${_pkgver/+k3s/.}
 pkgrel=0
 pkgdesc="Lightweight Kubernetes. 5 less than k8s."
 url="https://k3s.io"
@@ -59,6 +59,6 @@ package() {
 	install -m644 -D "$srcdir"/k3s.confd "$pkgdir"/etc/conf.d/k3s
 }
 
-sha512sums="0fe69d9b43b88fa0c63ce55acbd6f23a645a74f9319cd8dd128a9fe7ea5e758df195e79ac9d2a91dc137d84db6cf68128ff53552c76cf5b81ab75f72cd6d1636  k3s-1.17.0.1.tar.gz
+sha512sums="b31c86c919e728174b89cf71d36308e1884ffd2f3674771ecbe5ab6835858591471f990c7057430accfbfcbfb2c0b6c3cd6b82a965d6f8b99864f8a2178573a8  k3s-1.17.3.1.tar.gz
 9501422f1bf5375555116cbeedb32de32109153396699bde1300ce01156c3e57fe3fb14a57f7de1dce47c955e5e6d61de7fea181a07b407f5b452006bc58991c  k3s.initd
 dda2fc70e884ef439fece8f850d798f98d07cd431f0b8b79183f192b35f68fc7c633d3c790aae7b86ca57331212a7bb2f783131b752a4e1e71ef918469e6b944  k3s.confd"
