--- a/testing/eolie/APKBUILD
+++ b/testing/eolie/APKBUILD
@@ -1,21 +1,19 @@
 # Contributor: Daniele Debernardi <drebrez@gmail.com>
 # Maintainer: Daniele Debernardi <drebrez@gmail.com>
 pkgname=eolie
-pkgver=0.9.63
-pkgrel=3
+pkgver=0.9.98
+pkgrel=0
 pkgdesc="Web browser for GNOME"
 url="https://gitlab.gnome.org/World/eolie"
-arch="all"
+arch="noarch"
 license="GPL-3.0-or-later"
 depends="webkit2gtk gtkspell3 py3-cairo py3-gobject3"
-makedepends="meson gobject-introspection-dev webkit2gtk-dev python3-dev py3-gobject3-dev"
+makedepends="meson python3 glib-dev gobject-introspection-dev gtk+3.0-dev"
 checkdepends="desktop-file-utils appstream-glib"
 subpackages="$pkgname-lang"
-source="$pkgname-$pkgver.tar.xz::https://gitlab.gnome.org/World/eolie/uploads/d42b466752729a0d3fa828a721e25043/eolie-0.9.63.tar.xz
+source="https://adishatz.org/eolie/eolie-$pkgver.tar.xz
 	dont-require-py3-gettext-support.patch
-	python-3.8-compat.patch
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
 	meson \
@@ -36,6 +34,5 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="9e146db9de830a1766697f3b6657caa3feaeb270a951dc69d21fe08c39fa50d09eb2a63f66425fe37373c3423cca1b6a3a5b90994bd01f7bb1c13538e90d0873  eolie-0.9.63.tar.xz
-5420b20178a7c973ab9f6ac27b56c6660d103b48097b4f04c43f7856920cd653cf6a8fb83e9b3c2102c270b17ad1d371b3390e4340959971ba4bfecfab518806  dont-require-py3-gettext-support.patch
-dcf97f7a362d08f0bf4fc9c2bd75dfe16e3c048b6ab67bf832289e0fcd2fb73247718deb03cb89f2dfed1bff2128b0525e1aa2bc2ee3662d0184dfcda98ed130  python-3.8-compat.patch"
+sha512sums="36f26bd63dac2137bab4c931db0b7a1afb3c3443d7ae6ccb5034f71e6390914d34834195cfb2dfee94fbeaa82eb2be9a29d5e35a40990166549fd498aa744f36  eolie-0.9.98.tar.xz
+5420b20178a7c973ab9f6ac27b56c6660d103b48097b4f04c43f7856920cd653cf6a8fb83e9b3c2102c270b17ad1d371b3390e4340959971ba4bfecfab518806  dont-require-py3-gettext-support.patch"
