main/coreutils: upgrade to 8.32

--- a/main/coreutils/APKBUILD
+++ b/main/coreutils/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Michael Mason <ms13sp@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=coreutils
-pkgver=8.31
+pkgver=8.32
 pkgrel=0
 pkgdesc="The basic file, shell and text manipulation utilities"
 url="https://www.gnu.org/software/coreutils/"
@@ -11,17 +11,16 @@ license="GPL-3.0-or-later"
 makedepends="bash acl-dev attr-dev perl"
 subpackages="$pkgname-doc"
 install="$pkgname.post-deinstall"
-source="https://ftp.gnu.org/gnu/coreutils/$pkgname-$pkgver.tar.xz"
+source="https://ftp.gnu.org/gnu/coreutils/coreutils-$pkgver.tar.xz
+	ls.patch
+	"
 options="!check"
-
-builddir="$srcdir"/$pkgname-$pkgver
 
 # secfixes:
 #   8.30-r0:
-#   - CVE-2017-18018
+#     - CVE-2017-18018
 
 build() {
-	cd "$builddir"
 	LIBS="-lrt" ./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -37,7 +36,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 
 	rm -rf "$pkgdir"/usr/lib/charset.alias
@@ -63,8 +61,8 @@ package() {
 
 # XXX - some gnulib tests broken, find a way to patch out gnulib tests
 check() {
-	cd "$builddir"
 	make check
 }
 
-sha512sums="ef8941dae845bbf5ae5838bc49e44554a766302930601aada6fa594e8088f0fbad74e481ee392ff89633e68b99e4da3f761fcb5d31ee3b233d540fe2a2d4e1af  coreutils-8.31.tar.xz"
+sha512sums="1c8f3584efd61b4b02e7ac5db8e103b63cfb2063432caaf1e64cb2dcc56d8c657d1133bbf10bd41468d6a1f31142e6caa81d16ae68fa3e6e84075c253613a145  coreutils-8.32.tar.xz
+2742d74c45bdb52c524d415fb0787ed63164aec2c22980a1c46b40b7db2f0911008161b1219d5b571cc25de274bacc20c8be3f651906967a032a3ac9859cffce  ls.patch"
