--- a/main/nsd/APKBUILD
+++ b/main/nsd/APKBUILD
@@ -5,7 +5,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=nsd
 pkgver=4.2.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Authoritative only, high performance and simple DNS server"
 url="https://www.nlnetlabs.nl/projects/nsd"
 arch="all"
@@ -29,7 +29,9 @@ build() {
 		--mandir=/usr/share/man \
 		--with-user=nsd \
 		--with-pidfile=/run/nsd/nsd.pid \
-		--with-xfrdir=/var/db/nsd
+		--with-xfrdir=/var/db/nsd \
+		--enable-ratelimit \
+		--enable-ratelimit-default-is-off
 	make
 }
 
