testing/py3-jsonpickle: upgrade to 1.3

--- a/testing/py3-jsonpickle/APKBUILD
+++ b/testing/py3-jsonpickle/APKBUILD
@@ -1,15 +1,17 @@
 # Maintainer:
 pkgname=py3-jsonpickle
-pkgver=1.2
+pkgver=1.3
 pkgrel=0
-pkgdesc="an jsonpickle implementation"
+pkgdesc="Serializing any arbitrary object graph into JSON"
 url="https://pypi.python.org/pypi/jsonpickle/"
 arch="noarch"
 license="BSD-3-Clause"
 depends="python3 py3-numpy py3-pandas"
 makedepends="py3-setuptools"
 checkdepends="py3-pytest"
-source="https://files.pythonhosted.org/packages/source/j/jsonpickle/jsonpickle-$pkgver.tar.gz"
+source="https://files.pythonhosted.org/packages/source/j/jsonpickle/jsonpickle-$pkgver.tar.gz
+	tests.patch
+	"
 builddir="$srcdir/jsonpickle-$pkgver"
 
 replaces="py-jsonpickle" # Backwards compatibility
@@ -27,4 +29,5 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="0a5bfb2e77175c9174ee1783301c613e25fcfa60f07e610206d1e1e34053e90b21b12bc1b1045dd03ff2d4efe5940d85d852800037ca01397994c022f0ffb2c6  jsonpickle-1.2.tar.gz"
+sha512sums="5e7faa32f4fd2da88d9cfea8c0355121ece12aa1b4434845e6bd679718f433e5c27835b405f833a31d69d09d7a6ae6c3d5e4bf1f6dc9c50c7ff1690cf82271b0  jsonpickle-1.3.tar.gz
+8df533695556bc7b329211dfbb5ad667fbd8f9b569721a054f9dead9402ac365666f50ff4343feda536e679a58f1244708ab10fa2f6f8b33b2469dfdc57c576c  tests.patch"
