--- a/testing/crun/APKBUILD
+++ b/testing/crun/APKBUILD
@@ -1,18 +1,20 @@
 # Contributor: kohnish <kohnish@gmx.com>
 # Maintainer: kohnish <kohnish@gmx.com>
 pkgname=crun
-pkgver=0.12.2.1
+pkgver=0.13
 pkgrel=0
-pkgdesc="Command line utility that performs various operations on container images and image repositories"
+pkgdesc="A fast and lightweight fully featured OCI runtime and C library for running containers"
 url="https://github.com/containers/crun"
 arch="all"
-license="GPL-3.0-only"
+license="GPL-2.0-or-later AND LGPL-2.1-or-later"
 makedepends="libcap-dev libseccomp-dev yajl-dev argp-standalone python3 go-md2man"
 subpackages="$pkgname-doc $pkgname-static"
 source="https://github.com/containers/crun/releases/download/$pkgver/crun-$pkgver.tar.xz"
 
 build() {
-	./configure --disable-systemd --prefix=/usr
+	./configure \
+		--prefix=/usr \
+		--disable-systemd
 	make
 }
 
@@ -24,4 +26,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="3543ee4df4ba6b933b3a4e1310262fa2cdfbd96af2e07045eb551338305b4b622af649087f1abc23f3a29cd385a3d4926004488ab01180d96fb79c4d918c2d99  crun-0.12.2.1.tar.xz"
+sha512sums="a577750613b2a571f1317a24c66818a54914621c1450f5ce50b6f46e6d824a80651bb330904a11aef3a48177f85f1a0571c85b3f06d75942d9daf79f726b828e  crun-0.13.tar.xz"
