testing/minio-client: upgrade to 0.20200225

--- a/testing/minio-client/APKBUILD
+++ b/testing/minio-client/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Chloe Kudryavtsev <toast@toastin.space>
 pkgname=minio-client
 _pkgname=mc
-_pkgver='RELEASE.2020-02-05T20-07-22Z'
+_pkgver='RELEASE.2020-02-25T18-10-03Z'
 pkgver=${_pkgver#*.}
 pkgver=${pkgver%T*}
 pkgver=0.${pkgver//-}
@@ -11,7 +11,7 @@ url="https://minio.io/"
 arch="all"
 license="Apache-2.0"
 makedepends="go"
-source="$_pkgname-$_pkgver.tar.gz::https://github.com/minio/$_pkgname/archive/$_pkgver.tar.gz"
+source="$_pkgname-$pkgver.tar.gz::https://github.com/minio/$_pkgname/archive/$_pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$_pkgver"
 options="net"
 
@@ -39,4 +39,4 @@ cleanup_srcdir() {
 	go clean -modcache
 	default_cleanup_srcdir
 }
-sha512sums="bcf77211c86270c70fed0ab7c1ad25895c082a08189872691bdbdb17141e96aa9fe821c04e28ac7a935933faa7b7f06b6ad0aa743e9ad0fb61681a8e767b4f1b  mc-RELEASE.2020-02-05T20-07-22Z.tar.gz"
+sha512sums="5faf9a90cc36c1b97cd2f230cf4f30010ac5ac979cea0d45a5042b4e360055e6ccd62b00f236471e4fbff4ad2633de27f0c7548d9e3018d712c1386ef9d1b5e2  mc-0.20200225.tar.gz"
