--- a/community/py3-pyclipper/APKBUILD
+++ b/community/py3-pyclipper/APKBUILD
@@ -1,20 +1,32 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=py3-pyclipper
+_pyname=pyclipper
 pkgver=1.1.0
-pkgrel=0
+# Upstream has a custom versioning scheme. Requested adopting semver.org:
+# https://github.com/fonttools/pyclipper/issues/26
+_pkgpostver="$pkgver.post3"
+pkgrel=1
 pkgdesc="Cython wrapper for clipper"
 url="https://github.com/fonttools/pyclipper"
 arch="all"
 license="MIT"
 depends="python3"
-makedepends="py3-setuptools python3-dev cython"
+makedepends="py3-setuptools python3-dev cython clipper-dev"
 checkdepends="py3-pytest"
-source="$pkgname-$pkgver.tar.gz::https://github.com/fonttools/pyclipper/archive/$pkgver.post2.tar.gz"
-builddir="$srcdir/pyclipper-$pkgver.post2"
+source="https://files.pythonhosted.org/packages/source/p/$_pyname/$_pyname-$_pkgpostver.zip
+	10-system-libs.patch
+"
+builddir="$srcdir/$_pyname-$_pkgpostver"
+
+prepare() {
+	default_prepare
+	# For system-wide consistency, and to save installation space,
+	# we use the shared library from Alpine package "clipper".
+	rm pyclipper/clipper.cpp pyclipper/clipper.hpp
+}
 
 build() {
-	git init
 	python3 setup.py build
 }
 
@@ -26,4 +38,5 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="2c5044ef3a516e909a1f2e87a4824660bf02721f830a0dfb6a853eae02875b6e45a0aaaf3c3591ad7a5b6679364a366c5977f7ba1f44899f98a7c2f95f2f5061  py3-pyclipper-1.1.0.tar.gz"
+sha512sums="303be17e498f1d9fc5cdd0ce7c3e4c92c5d6dae7c7be7003402baa8403ec06951ec4805401748689e429118484cebaa6a762b8c2f4fc6ec801b4fd4a891131d9  pyclipper-1.1.0.post3.zip
+855d20489b4f7d90242ac2cb81b00b555d11925bf7c87d523a03ca3807fb1902d67a71645f7bc37f1997fd8bf779af06cb164f6de3a221149df7b69d4c2a283b  10-system-libs.patch"
