testing/poco: take over maintainership and switch to CMake

--- a/testing/poco/APKBUILD
+++ b/testing/poco/APKBUILD
@@ -1,40 +1,30 @@
 # Contributor: Leonardo Arena <rnalrd@alpinelinux.org>
-# Maintainer:
+# Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=poco
 pkgver=1.10.1
-pkgrel=0
+pkgrel=1
 pkgdesc="C++ class libraries for building network- and internet-based applications"
-options="!check" # No testsuite
 url="https://pocoproject.org/"
 arch="all"
 license="BSL-1.0"
-makedepends="openssl-dev linux-headers zlib-dev pcre-dev expat-dev sqlite-dev"
-subpackages="$pkgname-dev"
+makedepends="cmake chrpath openssl-dev linux-headers zlib-dev pcre-dev expat-dev sqlite-dev mariadb-connector-c-dev unixodbc-dev postgresql-dev"
 source="https://pocoproject.org/releases/poco-$pkgver/poco-$pkgver-all.tar.gz
 	cxxflags.patch
 	"
+subpackages="$pkgname-dev"
+options="!check" # No testsuite
 
-builddir="$srcdir"/$pkgname-$pkgver-all
+builddir="$srcdir/$pkgname-$pkgver-all"
 
 build() {
-	./configure --config=Linux \
-		--prefix=/usr \
-		--minimal \
-		--shared \
-		--no-tests \
-		--no-samples \
-		--unbundled
-	make
+	cmake -B "$builddir"/build \
+		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_INSTALL_PREFIX=/usr
+	make -C build
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
-	_basedir="$pkgdir"/usr/include/Poco
-	for dir in Net Crypto; do
-		test -d "$_basedir"/$dir || mkdir "$_basedir"/$dir
-	done
-	cp NetSSL_OpenSSL/include/Poco/Net/*.h "$_basedir"/Net
-	cp Crypto/include/Poco/Crypto/*.h "$_basedir"/Crypto
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="858a37c49563fa602a5e4783438154a3e1e6c91f8a3adcae62c3d922eccd30b8ba273b2c2b16b5f80c1deb80eb350056e6923a2788ec2e17a595a44d4f97f30d  poco-1.10.1-all.tar.gz
