--- a/testing/sdparm/APKBUILD
+++ b/testing/sdparm/APKBUILD
@@ -1,44 +1,27 @@
-# Contributor: 
+# Contributor:
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=sdparm
-pkgver=1.10
+pkgver=1.11
 pkgrel=0
 pkgdesc="SCSI device parameter modification tool"
 url="http://sg.danny.cz/sg/sdparm.html"
 arch="all"
-license="BSD"
-depends=""
-depends_dev=""
-makedepends="$depends_dev"
-install=""
+license="BSD-2-Clause"
+makedepends="linux-headers"
 subpackages="$pkgname-doc"
 source="http://sg.danny.cz/sg/p/sdparm-$pkgver.tgz"
 
-_builddir="$srcdir"/sdparm-$pkgver
-prepare() {
-	local i
-	cd "$_builddir"
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
-}
-
 build() {
-	cd "$_builddir"
 	./configure --prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
-		--localstatedir=/var \
-		|| return 1
-	make || return 1
+		--localstatedir=/var
+	make
 }
 
 package() {
-	cd "$_builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="1cfa95ced443d190ee9e4a899c9cfc6b98367ba39a9cc201c0db2f8c92dd4e74368182be3b8bfe28e51761b1ededf914ee669ef8ff6023d1ec1f05d69889a35f  sdparm-1.10.tgz"
+sha512sums="cb5d1dd351464fcc05005429bb8f452b05e6673b1dd8b699f762d005ab3e612b3b7d6ea400ffbd5e98e33e3e78da735d01705353b8a9b9567aac55a3f6b6d813  sdparm-1.11.tgz"
