community/phodav: upgrade to 2.4

--- a/community/phodav/APKBUILD
+++ b/community/phodav/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=phodav
-pkgver=2.3
-pkgrel=2
+pkgver=2.4
+pkgrel=0
 pkgdesc="A WebDAV server using libsoup"
 url="https://wiki.gnome.org/phodav"
 arch="all"
@@ -12,14 +12,10 @@ subpackages="$pkgname-dev $pkgname-doc $pkgname-lang chezdav chezdav-doc:chezdav
 	spice-webdavd:spice spice-webdavd-openrc:spice_openrc"
 source="https://download.gnome.org/sources/phodav/$pkgver/phodav-$pkgver.tar.xz
 	spice-webdavd.initd
-	meson_build-udev.patch
 	"
-builddir="$srcdir"/$pkgname-$pkgver
 
 build() {
-	cd "$builddir"
-
-	meson build/ \
+	meson \
 		--prefix=/usr \
 		--datadir=share \
 		--sysconfdir=/etc \
@@ -29,18 +25,13 @@ build() {
 		--buildtype=plain \
 		-Davahi=enabled \
 		-Dsystemd=disabled \
-		-Dudev=enabled
-
-	# print config options to log
-	meson configure build/
-
-	ninja -C build/
+		-Dudev=enabled \
+		. output
+	ninja -C output
 }
 
 package() {
-	cd "$builddir"
-
-	DESTDIR="$pkgdir" ninja -C build install
+	DESTDIR="$pkgdir" ninja -C output install
 
 	rm -rf "$pkgdir"/usr/lib/systemd
 }
@@ -68,9 +59,8 @@ spice_openrc() {
 	pkgdesc="Spice daemon for the DAV channel (OpenRC init scripts)"
 	install_if="spice-webdavd openrc"
 	mkdir -p "$subpkgdir"/etc/init.d
-	install "$srcdir"/spice-webdavd.initd "$subpkgdir"/etc/init.d/spice-webdavd	
+	install "$srcdir"/spice-webdavd.initd "$subpkgdir"/etc/init.d/spice-webdavd
 }
 
-sha512sums="5f76ed0a4322707d117fc40a7bcab3a0bed7e53de52e0517e3ad79e3a6d93fc0200f6b54d8e001941d76ae22bd7f9ad158c0bee19354a316a18691057b65a002  phodav-2.3.tar.xz
-26db271c92760c38cf88bee6f8486e1c64aeaf81b19906783a3ea5e60054b2d5e7effdd26c59789ae3e964baa8bb498358724322b360bce229b45b6bee68f538  spice-webdavd.initd
-5ab7b8577ad78148a49d5218f839d4e82cce01167ca5d451b121f33c292ec5f6875e7d5d78b5f2969626e34b4225091a192f70c7916886651c39c60369cf2e7d  meson_build-udev.patch"
+sha512sums="63f21843ccf62382bc48aa0c7f9ae6882431e59f590da5047f06e8cbbfcf8195744dcfc3b268997bf24ccf1f82f643b8189243f1ec80e60652a03c8c6a0f9b9e  phodav-2.4.tar.xz
+1e10314f831840d9f54f38163bd518f42a378fe27b508639771b82610b4a434d4ec56c70a334dbfc7c8cd91160ba346751978f511c522577803248205dbcd211  spice-webdavd.initd"
