--- a/testing/dav1d/APKBUILD
+++ b/testing/dav1d/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer:
 pkgname=dav1d
-pkgver=0.5.2
-pkgrel=1
+pkgver=0.6.0
+pkgrel=0
 pkgdesc="small and fast AV1 Decoder"
 url="https://code.videolan.org/videolan/dav1d"
 arch="all"
@@ -24,7 +24,7 @@ build() {
 		-Denable_tools=true \
 		-Dfuzzing_engine=none \
 		-Dtestdata_tests=false \
-		${meson_opts} \
+		$meson_opts \
 		build
 	ninja -C build
 }
@@ -37,4 +37,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="37da9138a1dba68b9e723ba48b23eab567f839308132fc5a28727c131280f2eca3e160b074982f5265c914dcad0e4029af9ce23909b32bb9ec60f235c623e384  dav1d-0.5.2.tar.bz2"
+sha512sums="ea4897d890aadd17370909d5bed3a8e93e40dbdc131808adf0e0ecfdc36d46fd1c31efaa12a58e11ac632bc99beef3d1760c7ca4ba757aaaa7946057530ac2f5  dav1d-0.6.0.tar.bz2"
