main/mesa: upgrade to 20.0.1

--- a/main/mesa/APKBUILD
+++ b/main/mesa/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mesa
-pkgver=19.3.4
-pkgrel=1
+pkgver=20.0.1
+pkgrel=0
 pkgdesc="Mesa DRI OpenGL library"
 url="https://www.mesa3d.org"
 arch="all"
@@ -56,12 +56,15 @@ makedepends="
 	wayland-protocols
 	xorgproto
 	zlib-dev
+	zstd-dev
 	"
 source="
 	https://mesa.freedesktop.org/archive/mesa-$pkgver.tar.xz
 	adjust-cache-deflate-buffer.patch
 	musl-fix-includes.patch
 	add-use-elf-tls.patch
+	missing-dep-on-sha1_h.patch
+	time_h.patch
 	"
 replaces="mesa-dricore"
 
@@ -115,6 +118,8 @@ esac
 
 build() {
 	export CFLAGS="$CFLAGS -D_XOPEN_SOURCE=700"
+	export MESA_GIT_SHA1_OVERRIDE=53b2b224dc2de982c37915a0ad218e33365ff75e
+
 	meson \
 		--prefix=/usr \
 		--sysconfdir=/etc \
@@ -141,11 +146,14 @@ build() {
 		-Dgallium-vdpau=true \
 		-Dgallium-va=true \
 		-Dgallium-xvmc=false \
-		-Dglx-use-tls=false \
 		-Dgallium-nine=false \
 		-Db_ndebug=true \
 		$_arch_opts \
 		. output
+
+	# Print config
+	meson configure output
+
 	# parallel build workaround
 	ninja -C output src/compiler/nir/nir_intrinsics.h
 
@@ -307,12 +315,15 @@ _vulkan() {
 _vulkan_layer() {
 	pkgdesc="Vulkan overlay layer to display information about the application"
 
-	mkdir -p "$subpkgdir"/usr/share/vulkan "$subpkgdir"/usr/lib
+	mkdir -p "$subpkgdir"/usr/bin "$subpkgdir"/usr/share/vulkan "$subpkgdir"/usr/lib
 	mv "$pkgdir"/usr/share/vulkan/explicit_layer.d "$subpkgdir"/usr/share/vulkan
 	mv "$pkgdir"/usr/lib/libVkLayer_MESA_overlay.so "$subpkgdir"/usr/lib
+	mv "$pkgdir"/usr/bin/mesa-overlay-control.py "$subpkgdir"/usr/bin
 }
 
-sha512sums="2bbb3dc8f1d839f11fe12cc959393cd69607fa6714b2166b80299e0559d2d3b0ac38ed4e15ac3e5f472264eb24536d1901d350f7409f3a7e00d6f4ccbb2312fb  mesa-19.3.4.tar.xz
+sha512sums="9e005ebbb699c1ad83b73c503c467907958a3d9cad644d8f7ac95804fd265debcf563784a1054c8e0bf40106e33b13185607e8270a197e9ddc34c50b1b2c4d82  mesa-20.0.1.tar.xz
 cdf22d2da3328e116c379264886bd01fd3ad5cc45fe03dc6fd97bdc4794502598ee195c0b9d975fa264d6ac31c6fa108c0535c91800ecf4fcabfd308e53074cc  adjust-cache-deflate-buffer.patch
 cf849044d6cc7d2af4ff015208fb09d70bf9660538699797da21bda2ecb7c1892d312af83d05116afd826708d9caafb1d05a13f09139c558aea6fee931e3eee7  musl-fix-includes.patch
-9aa207a38d538abbd8e7a7210e3081508563e85e8c27b2269b8f40fd62d9fc6fee0cb2f573a0e62c42f8ba0fb85740459b761f009d5991cfd9813d7614541908  add-use-elf-tls.patch"
+9aa207a38d538abbd8e7a7210e3081508563e85e8c27b2269b8f40fd62d9fc6fee0cb2f573a0e62c42f8ba0fb85740459b761f009d5991cfd9813d7614541908  add-use-elf-tls.patch
+250a048193d1e2f4044c6850e707e1b0f67812f03357cb53bc4c3c501ade14dc9b0f40bf6a7d87903a65d5d87af58d210fd2729fa658f10b63d4d2d60b6bcc11  missing-dep-on-sha1_h.patch
+0e704e0082697170ff33a600988b59b4690f1560af4193c86920ca31128409c64f89f302707cb1ac58f8bc47653b5a8a5d38f36f634e7b7def7659894d4c6c5a  time_h.patch"
