--- a/community/enscript/APKBUILD
+++ b/community/enscript/APKBUILD
@@ -1,4 +1,4 @@
-# Maintainer:
+# Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=enscript
 pkgver=1.6.6
 pkgrel=1
@@ -7,14 +7,9 @@ url="https://www.gnu.org/software/enscript/"
 arch="all"
 license="GPL-3.0-only"
 subpackages="$pkgname-doc"
-source="https://ftp.gnu.org/gnu/enscript/$pkgname-$pkgver.tar.gz"
-
-builddir="$srcdir/$pkgname-$pkgver"
-options="!check"
+source="https://ftp.gnu.org/gnu/enscript/enscript-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
-
 	# Avoid paths sneak in.
 	unset LIBRARY_PATH LD_RUN_PATH
 	PATH=/sbin:/usr/sbin:/bin:/usr/bin
@@ -27,9 +22,11 @@ build() {
 	make
 }
 
-package() {
-	cd "$builddir"
+check() {
+	make check
+}
 
+package() {
 	make DESTDIR="$pkgdir" install
 	rm -rf "$pkgdir"/usr/share/info
 	install -Dm644 COPYING "$pkgdir"/usr/share/licenses/$pkgname/COPYING
