--- a/testing/qt5-qtgamepad/APKBUILD
+++ b/testing/qt5-qtgamepad/APKBUILD
@@ -1,34 +1,39 @@
 # Contributor: Diaz Devera Victor <vitronic2@gmail.com>
 # Maintainer: Díaz Urbaneja Diego <sodomon2@gmail.com>
 pkgname=qt5-qtgamepad
-_realname=qtgamepad
-pkgver=5.12.4
-_qtver=5.12
+pkgver=5.14.1
 pkgrel=0
-pkgdesc="Adds support for getting events from gamepad devices"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://doc.qt.io/qt-5/qtgamepad-index.html"
-arch="all"
-license="GPL-3.0-or-later"
-depends="sdl2 qt5-qtbase qt5-qtdeclarative libevdev"
-makedepends="qt5-qtbase-dev qt5-qtdeclarative-dev libevdev eudev-dev"
+license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
+pkgdesc="Adds support for getting events from gamepad devices"
+depends="sdl2 libevdev"
+depends_dev="qt5-qtdeclarative-dev eudev-dev"
+makedepends="$depends_dev qt5-qtbase-dev libevdev"
 subpackages="$pkgname-dev"
-options="!check" #no testsuite
-source="https://download.qt.io/official_releases/qt/$_qtver/$pkgver/submodules/$_realname-everywhere-src-$pkgver.tar.xz"
-builddir="$srcdir/$_realname-everywhere-src-$pkgver"
+builddir="$srcdir/qtgamepad-everywhere-src-$pkgver"
 
-prepare() {
-	mkdir -p build
-}
+case $pkgver in
+*_beta*|*_rc*) _rel=development_releases;;
+*) _rel=official_releases;;
+esac
+
+source="http://download.qt.io/$_rel/qt/${pkgver%.*}/$pkgver/submodules/qtgamepad-everywhere-src-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"/build
-	qmake-qt5 ..
+	qmake-qt5
 	make
 }
 
-package() {
-	cd "$builddir"/build
-	make INSTALL_ROOT="$pkgdir" install
+check() {
+	make check
 }
 
-sha512sums="e84e637e3b2ced01e92ceb2b54b829a1e2346a4c96b15044f59bcc9764a24c91df6fcd0165f454143cfad87c05471b7d84567d9c6ea8fd3b4c753e5e771e8947  qtgamepad-everywhere-src-5.12.4.tar.xz"
+package() {
+	make INSTALL_ROOT="$pkgdir" install
+
+	install -d "$pkgdir"/usr/share/licenses
+	ln -s /usr/share/licenses/qt5-base "$pkgdir"/usr/share/licenses/$pkgname
+}
+
+sha512sums="d3c84f85cd47cd0a8117820d425c524c04a84262e052d4646de611c61e29a74d5b3a27418b9f5b2cffa06fc30a3f5d7c57a7af80e68b30f01945140d0caa16da  qtgamepad-everywhere-src-5.14.1.tar.xz"
