testing/qt5-qtwebview: upgrade to 5.14.1
Also cleanup APKBUILD and sync it with the other Qt packages

--- a/testing/qt5-qtwebview/APKBUILD
+++ b/testing/qt5-qtwebview/APKBUILD
@@ -1,38 +1,41 @@
 # Contributor: Danct12 <danct12@disroot.org>
 # Maintainer: Danct12 <danct12@disroot.org>
 pkgname=qt5-qtwebview
-pkgver=5.12.5
+pkgver=5.14.1
 pkgrel=0
-pkgdesc="Provides a way to display web content in a QML application"
+# ppc64le and s390x blocked by qt5-qtwebengine
+# armhf blocked by qt5-qtdeclarative
+arch="all !ppc64le !s390x !armhf"
 url="https://www.qt.io/developers/"
-# ppc64le, s390x: not supported by qt5-qtwebengine
-arch="all !ppc64le !s390x !armhf" # armhf blocked by qt5-qtdeclarative
 license="LGPL-3.0-only AND GPL-2.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
+pkgdesc="Provides a way to display web content in a QML application"
 depends="qt5-qtwebengine"
-makedepends="qt5-qtbase-dev qt5-qtdeclarative-dev"
+depends_dev="qt5-qtdeclarative-dev"
+makedepends="$depends_dev qt5-qtbase-dev"
 subpackages="$pkgname-dev"
-options="!check" # no testsuite
+builddir="$srcdir/qtwebview-everywhere-src-$pkgver"
 
 case $pkgver in
-*_beta*|*_rc*) _rel=development_releases;;
-*) _rel=official_releases;;
+	*_beta*|*_rc*) _rel=development_releases;;
+	*) _rel=official_releases;;
 esac
 
 source="http://download.qt.io/$_rel/qt/${pkgver%.*}/$pkgver/submodules/qtwebview-everywhere-src-$pkgver.tar.xz"
-
-builddir="$srcdir/${pkgname/qt5-/}-everywhere-src-$pkgver"
 
 build() {
 	qmake-qt5 CONFIG+="lang-all handwriting"
 	make
 }
 
+check() {
+	make check
+}
+
 package() {
 	make INSTALL_ROOT="$pkgdir" install
 
-	# Drop QMAKE_PRL_BUILD_DIR because reference the build dir
-	find "$pkgdir/usr/lib" -type f -name '*.prl' \
-		-exec sed -i -e '/^QMAKE_PRL_BUILD_DIR/d' {} \;
+	install -d "$pkgdir"/usr/share/licenses
+	ln -s /usr/share/licenses/qt5-base "$pkgdir"/usr/share/licenses/$pkgname
 }
 
-sha512sums="310beedf88cefc05458e99838e7cb71971aa24ba6c460ff3da804c2ab7f56167ca1067ddca71ee29ced32ea974fe405261f24c8bbcac0c7b69063d7c4e38a4de  qtwebview-everywhere-src-5.12.5.tar.xz"
+sha512sums="80345be7571b8e386c7f8bf343a7afc6bda712437e7426021823b87c48618dfc9c4863dd74a533f88d0cb259927b89f7eaeedce3caac503b152107c9002c8e3a  qtwebview-everywhere-src-5.14.1.tar.xz"
