testing/nymphcast-client: new aport

--- a/testing/nymphcast/APKBUILD
+++ b/testing/nymphcast/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=nymphcast
-pkgver=0_git20200306
+pkgver=0_git20200308
 pkgrel=0
 _commit="ad8f817263b7c57eff262d1454e03cd08d626e44"
 arch="all !armv7" # Assembly failure
@@ -29,8 +29,12 @@ package() {
 		install -Dm644 "$i" "$pkgdir"/etc/nymphcast/"$i"
 	done
 
-	install -d "$pkgdir"/usr/share/nymphcast
+	install -d \
+		"$pkgdir"/usr/share/nymphcast
 	cp -r apps "$pkgdir"/usr/share/nymphcast/
+	for file in *.jpg; do
+		install -Dm644 "$file" "$pkgdir"/usr/share/nymphcast/wallpapers/$file
+	done
 
 	install -Dm755 openrc/nymphcast "$pkgdir"/etc/init.d/nymphcast
 
