--- a/community/libgnome-games-support/APKBUILD
+++ b/community/libgnome-games-support/APKBUILD
@@ -1,15 +1,14 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=libgnome-games-support
-pkgver=1.4.4
-pkgrel=2
+pkgver=1.6.0.1
+pkgrel=0
 arch="all"
 url="https://gitlab.gnome.org/GNOME/libgnome-games-support"
-pkgdesc="Code shared between GNOME games"
+pkgdesc="Code shared between GNOME games"
 license="LGPL-3.0-or-later"
 makedepends="meson ninja vala libgee-dev gtk+3.0-dev"
-source="https://download.gnome.org/sources/libgnome-games-support/${pkgver%.*}/libgnome-games-support-$pkgver.tar.xz
-	meson-support.patch"
+source="https://download.gnome.org/sources/libgnome-games-support/${pkgver%.*.*}/libgnome-games-support-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-lang"
 
 build() {
@@ -31,5 +30,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="2b2c77210103610cb91554f870d634bc8d06f0886eef5166bf9909c1975a87d960005640d48e3e917f74c7553e3ae07d473ba06c6c5d6582313c50a390ec6168  libgnome-games-support-1.4.4.tar.xz
-3fdff90e5f4908b073234472716a2dd419d04772529c9c3cdff3a68e422e12c08578f023227607a1d4c90dac9b73f00b93c1f1cbec2623f2677c2d8d6399c89e  meson-support.patch"
+sha512sums="edb3ecf9864164f61395050c230e7288a6fc5ed16f8d413b6e42bf8dd5e1de2c100b90f61a33380f951896a653179da22244c8b7c908d6f17510abe9873ad77e  libgnome-games-support-1.6.0.1.tar.xz"
