community/vte3: upgrade to 0.60.0

--- a/community/vte3/APKBUILD
+++ b/community/vte3/APKBUILD
@@ -1,7 +1,8 @@
-# Maintainer: Natanael Copa <ncopa@alpinelinux.org>
+# Contributor: Natanael Copa <ncopa@alpinelinux.org>
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=vte3
-pkgver=0.58.3
-pkgrel=3
+pkgver=0.60.0
+pkgrel=0
 pkgdesc="Virtual Terminal Emulator library"
 url="https://developer.gnome.org/vte/"
 arch="all"
@@ -23,6 +24,7 @@ build() {
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--libexecdir=/usr/lib/$pkgname \
+		-D_systemd=false \
 		. output
 	ninja -C output
 }
@@ -34,6 +36,6 @@ check() {
 package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
-sha512sums="b0a38eb1cd7d923b0431af943dbdb89932833f9a2b0b8fc1fa9ee728c87418c1f5a424b2ccee661721093a80c569f3b41c721b0ba2302ba0c3a42d4c5e31aa9a  vte-0.58.3.tar.xz
+sha512sums="8c1a80ba90fa1c1f4b5ec1a1d3793af79c04fbbad4acecba094db79771555b1689017864bd81bee4366f9ef363f629f20731bac998d994b9bfa37ee59e9e58b0  vte-0.60.0.tar.xz
 94de7160b71f1c41aa19e8f9dc4538cd493da1a33dda6482c332f8e8932213631ccc2355506a616772dae451d653f035c66c721bd839570d6cb55e4d2b12e8a3  fix-W_EXITCODE.patch
 09caf90f7c280e484c40b4205d17b3921848dfb211b15f4126cca980eb7598c498dc0fd81fb38ca30c9f0bdab44fcb532819eab09b54d96badcffbf80695bb9b  vte-ng.patch"
