--- a/community/gnome-terminal/APKBUILD
+++ b/community/gnome-terminal/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-terminal
-pkgver=3.34.2
-pkgrel=3
+pkgver=3.36.0.1
+pkgrel=0
 pkgdesc="GNOME terminal emulator application"
 url="https://wiki.gnome.org/Apps/Terminal"
 arch="all !s390x !armhf !ppc64le" # limited by gnome-shell
@@ -11,7 +11,7 @@ depends="dbus desktop-file-utils gsettings-desktop-schemas ncurses-terminfo-base
 makedepends="dconf-dev gnome-shell gsettings-desktop-schemas-dev nautilus-dev vte3-dev
 	glib-dev intltool itstool pcre2-dev"
 subpackages="$pkgname-doc $pkgname-lang"
-source="https://download.gnome.org/sources/gnome-terminal/${pkgver%.*}/gnome-terminal-$pkgver.tar.xz
+source="https://download.gnome.org/sources/gnome-terminal/${pkgver%.*.*}/gnome-terminal-$pkgver.tar.xz
 	fix-W_EXITCODE.patch"
 
 build() {
@@ -34,5 +34,5 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="36df7483c2b56df1d9e66729826b1bb65755590498295615befdb89e25d69464ebf4b77928ccd88f069513cb58da2856dca748dbf6372ca145b4535609d76595  gnome-terminal-3.34.2.tar.xz
+sha512sums="6bb71e1ef24e90f08eaa946599e4b87a0685d4bc2c37af0b9b4539b3b7787b704f74e5509cdfbf974b23cbcb725b4f06ecdd7c144f4b64e728f9979a2d09fd8c  gnome-terminal-3.36.0.1.tar.xz
 21a426f7237a07057b83114282fe302787659ec4a171e894abb3542842403bfedbc051b7b19b48866266aeabaaa8d4590fdec0f058b5255b3309f315ae2f1fa6  fix-W_EXITCODE.patch"
