community/gnome-clocks: upgrade to 3.36.0

--- a/community/gnome-clocks/APKBUILD
+++ b/community/gnome-clocks/APKBUILD
@@ -1,15 +1,15 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-clocks
-pkgver=3.34.0
-pkgrel=3
+pkgver=3.36.0
+pkgrel=0
 pkgdesc="Clock application designed for GNOME 3"
 url="https://wiki.gnome.org/Apps/Clocks"
 arch="all"
 license="GPL-2.0-or-later"
 depends="gsettings-desktop-schemas"
 makedepends="meson glib-dev gtk+3.0-dev libgweather-dev gsound-dev gnome-desktop-dev
-	geoclue-dev geocode-glib-dev gettext-dev vala itstool"
+	geoclue-dev geocode-glib-dev gettext-dev vala itstool libhandy-dev"
 subpackages="$pkgname-lang $pkgname-doc"
 source="https://download.gnome.org/sources/gnome-clocks/${pkgver%.*}/gnome-clocks-$pkgver.tar.xz"
 
@@ -32,4 +32,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="9e59534c5c8257ecab97876fc2742d37fd5dd1aad770ac31dd1c7dbafa9843f992c7cc39e3f5025f5091baf852538eb9d62bb07dd0a5c3c7a6cd69befa61ab52  gnome-clocks-3.34.0.tar.xz"
+sha512sums="46013154aba26b7624ea76d02abb1210534bc6f0aec963c8882da7aa666b978a77b5bfd427c873aac58689f1321ffdb4b03c716b1a126ea34e5af7291c96ee5b  gnome-clocks-3.36.0.tar.xz"
