--- a/community/tepl/APKBUILD
+++ b/community/tepl/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=tepl
-pkgver=4.3.1
+pkgver=4.4.0
 pkgrel=0
 pkgdesc="Text editor product line"
 url="https://wiki.gnome.org/Projects/Tepl"
@@ -9,8 +9,9 @@ arch="all !s390x" # Limited by gtksourceview4
 license="GPL-3.0-or-later"
 makedepends="amtk-dev glib-dev gtksourceview4-dev gtk+3.0-dev libxml2-dev
 	uchardet-dev vala gobject-introspection-dev"
+checkdepends="xvfb-run"
+options="!check" # fails to find gvfs
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
-options="!check" # needs DISPLAY
 source="https://download.gnome.org/sources/tepl/${pkgver%.*}/tepl-$pkgver.tar.xz"
 
 build() {
@@ -20,16 +21,16 @@ build() {
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
-		--localstatedir=/var
+		--localstatedir=/var \
+		--enable-gvfs-metadata
 	make
 }
 
 check() {
-	make check
+	xvfb-run make check
 }
 
 package() {
 	make DESTDIR="$pkgdir" install
 }
-
-sha512sums="1c84fd3d55f8763728e4b8f57831e53c9e8946ff16c3d275d1a29d435602283827a791fe087e4e1ac5221f8173fb47f05f6f7a2944cce39e2ce54a5b2d26f5eb  tepl-4.3.1.tar.xz"
+sha512sums="2050c28f9564034bea7c44d3fa27784ab87503c2db6cf35e6389c40ca78722b092fbc52df5fdfc85cc1e39a9dc3c0e30fa7993fb63411b0240f3a6ac9607c282  tepl-4.4.0.tar.xz"
