community/gedit: upgrade to 3.36.0

--- a/community/gedit/APKBUILD
+++ b/community/gedit/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gedit
-pkgver=3.34.1
-pkgrel=2
+pkgver=3.36.0
+pkgrel=0
 pkgdesc="gedit is the GNOME text editor"
 url="https://wiki.gnome.org/Apps/Gedit"
 arch="all !s390x" # Limited by librsvg
@@ -10,7 +10,7 @@ license="GPL-2.0-only"
 depends_dev="gedit=$pkgver-r$pkgrel"
 makedepends="meson glib-dev gtk+3.0-dev gtksourceview4-dev libpeas-dev
 	libxml2-dev libsoup-dev gspell-dev libx11-dev gobject-introspection-dev
-	vala gtk-doc itstool perl"
+	vala gtk-doc itstool perl tepl-dev"
 options="!check" # no tests
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 source="https://download.gnome.org/sources/gedit/${pkgver%.*}/gedit-$pkgver.tar.xz"
@@ -31,4 +31,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="22968c678a2f7ecf062f490d5eedc97aaa53b15932db801ea83eb336f01f41e7a6037a85508a40164f38dee406f8db097b7ef6f1481ab44ea82668766d24966d  gedit-3.34.1.tar.xz"
+sha512sums="cd9629c9c4ce7fe62f47218472d482d9241bcdceee5f2b4f3c423d897eed065af428b2b7df12ea72f43dbcfb6502e9b6ca6ca93f175eab3d5260a1d02e4566b2  gedit-3.36.0.tar.xz"
