--- a/community/gedit-plugins/APKBUILD
+++ b/community/gedit-plugins/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gedit-plugins
-pkgver=3.34.1
-pkgrel=3
+pkgver=3.36.0
+pkgrel=0
 pkgdesc="Plugins for gedit, the GNOME text editor"
 url="https://wiki.gnome.org/Apps/Gedit/PluginsLists"
 arch="all !s390x" # Limited by gedit-dev and gtksourceview4-dev
@@ -10,6 +10,7 @@ license="GPL-2.0-only"
 depends="python3 py3-gobject3 vte3 gucharmap py3-dbus libpeas-python3"
 makedepends="glib-dev gtk+3.0-dev gtksourceview4-dev libpeas-dev gedit-dev vala
 	libgit2-glib-dev itstool vte3-dev gucharmap-dev py3-dbus-dev meson"
+checkdepends="appstream-glib"
 subpackages="$pkgname-lang $pkgname-doc"
 source="https://download.gnome.org/sources/gedit-plugins/${pkgver%.*}/gedit-plugins-$pkgver.tar.xz"
 
@@ -33,4 +34,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="7fe31c2b0a1381a44362bd6066422d182b2246e3f903f8cd83cde0467b9853620a445bea7878d93e95a0a71ac5d5dd081a1930d602007cf2a6ef00b1a45bebfc  gedit-plugins-3.34.1.tar.xz"
+sha512sums="3328ab4f09555291cf5c95f6838ae764380efd596ecf56487012817ab5735db604b5f4b61306174f7f992adab023b56b78a872e36ddd6f2f3d9a035db0065670  gedit-plugins-3.36.0.tar.xz"
