--- a/main/sshfs/APKBUILD
+++ b/main/sshfs/APKBUILD
@@ -1,13 +1,13 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=sshfs
 pkgver=3.7.0
-pkgrel=3
+pkgrel=4
 pkgdesc="FUSE client based on the SSH File Transfer Protocol"
 url="https://github.com/libfuse/sshfs"
 arch="all"
 license="GPL-2.0-or-later"
 depends="openssh-client fuse3"
-makedepends="fuse3-dev glib-dev meson coreutils"
+makedepends="fuse3-dev glib-dev meson coreutils py3-docutils"
 subpackages="$pkgname-doc"
 source="https://github.com/libfuse/sshfs/releases/download/sshfs-$pkgver/sshfs-$pkgver.tar.xz"
 options="!check" # requires FUSE kernel module to run tests
