main/sshfs: install additional documentation files

--- a/main/sshfs/APKBUILD
+++ b/main/sshfs/APKBUILD
@@ -27,7 +27,8 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 
 	mkdir -p "$pkgdir"/usr/share/doc/$pkgname/
-	install -Dm644 AUTHORS COPYING "$pkgdir"/usr/share/doc/$pkgname/
+	install -Dm644 README.rst ChangeLog.rst AUTHORS COPYING \
+		"$pkgdir"/usr/share/doc/$pkgname/
 }
 
 sha512sums="bd8bcd45dd9a5e9686c6fb442e877ffdb592ba0d3424d5dab84a955bfafb17e8666abefba6857467833f5b285842bdadd5a9b6c9e8128ac2e564c36df79aa570  sshfs-3.7.0.tar.xz"
