--- a/community/gnome-clocks/APKBUILD
+++ b/community/gnome-clocks/APKBUILD
@@ -5,7 +5,7 @@ pkgver=3.36.0
 pkgrel=0
 pkgdesc="Clock application designed for GNOME 3"
 url="https://wiki.gnome.org/Apps/Clocks"
-arch="all"
+arch="all !s390x" # missing: libhandy
 license="GPL-2.0-or-later"
 depends="gsettings-desktop-schemas"
 makedepends="meson glib-dev gtk+3.0-dev libgweather-dev gsound-dev gnome-desktop-dev
