community/live-media: fixed symbol-not-found issue
Disabled ssl support, since according with http://www.live555.com/liveMedia/
RTSP-over-TLS is sill in to-do list:

* support for SRTP ('secure' RTP), and perhaps also RTSP-over-TLS.

Cherry-picked from edge.
Fixes: https://gitlab.alpinelinux.org/alpine/aports/issues/11273

--- a/community/live-media/APKBUILD
+++ b/community/live-media/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=live-media
-pkgver=2018.12.14
+pkgver=2020.03.06
 pkgrel=0
 pkgdesc="A set of C++ libraries for multimedia streaming"
 url="http://live555.com/liveMedia"
@@ -8,20 +8,24 @@ arch="all"
 license="LGPL"
 subpackages="$pkgname-dev $pkgname-utils"
 options="!check"
-source="http://live555.com/liveMedia/public/live.$pkgver.tar.gz"
+source="http://live555.com/liveMedia/public/live.$pkgver.tar.gz
+0001-Add-a-pkg-config-file-for-the-shared-libraries.patch
+0003-Link-shared-libraries-with-g-instead-of-gcc-to-fix-b.patch
+0004-Reduce-number-of-unresolved-symbols-by-linking-libra.patch
+0005-Build-without-OpenSSL.patch
+"
 builddir="$srcdir"/live
 
 prepare() {
 	cd "$builddir"
-	sed -e "/^COMPILE_OPTS/s/$/ $CFLAGS -fPIC -DPIC -DXLOCALE_NOT_USED=1 -DRTSPCLIENT_SYNCHRONOUS_INTERFACE/" \
-		-i config.linux-with-shared-libraries
+	chmod -R 775 *
+	default_prepare
 }
 
 build() {
 	cd "$builddir"
 	./genMakefiles linux-with-shared-libraries
-	make C_COMPILER="${CC:-gcc}" CPLUSPLUS_COMPILER="${CXX:-g++}" \
-		|| return 1
+	make PREFIX=/usr LIBDIR=/usr/lib
 }
 
 package() {
@@ -53,4 +57,8 @@ utils() {
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
 
-sha512sums="8668f088e33c34a4a20a537e70c4f6678a93b275a77ce25697b95798f0b75d1d0f6a7f2d5284c0649330fa783d06946995e065241528169396460de548f5e44f  live.2018.12.14.tar.gz"
+sha512sums="7da439fbdeab0da6687dee56d9a27bf7b8f8a9c84b420d72f2e2a7ff7a73d18756d1fdb920f29b36917d93efcecc9230877637322d5041eeba114882b4bf7a06  live.2020.03.06.tar.gz
+d542668dfe9386dc31389db6dfe9ed20a8395ede5d1dabfee40f49ad0db67d0b3665c8dcd59d48e4761ba00beeecc3197b2d25cb3a04ef40988f949269e7c9ef  0001-Add-a-pkg-config-file-for-the-shared-libraries.patch
+5cf4a6159531e126bee83f981bd8583a1cef68cde2129f0d255b2f2d73055a21b7bf2bbcc822aa0265f1df7c32add6b95c57f59c5e08060750567fc268643612  0003-Link-shared-libraries-with-g-instead-of-gcc-to-fix-b.patch
+d5be57357d3c04356aac41804ee3d13434f754c7f86936e24a39c5e966a902628d9570afb37aa96a7c33a45fa5787182bec0441394d114e59d5a1f25250ea0c5  0004-Reduce-number-of-unresolved-symbols-by-linking-libra.patch
+cb737f55844773a0ad13bb17c1ab236c880a3eebe9ac11cef30bccd949cc7a144cc73a9b81ead6b011c8664c2863f57e1b8255790fe6652146a1b094f879761a  0005-Build-without-OpenSSL.patch"
