community/alpine: fix download, cert validation
also create debug subpackage

--- a/community/alpine/APKBUILD
+++ b/community/alpine/APKBUILD
@@ -1,19 +1,20 @@
 # Maintainer: Kaarle Ritvanen <kaarle.ritvanen@datakunkku.fi>
 pkgname=alpine
 pkgver=2.22
-_ver=${pkgver%_p*}
-_pver=${pkgver##*_p}
-pkgrel=0
+_commit=7e3b3be
+pkgrel=1
 pkgdesc="Text-based email client, friendly for novices but powerful"
 url="http://alpine.x10host.com/alpine/"
 arch="all"
 license="Apache-2.0"
 makedepends="openldap-dev heimdal-dev ncurses-dev openssl-dev
 	automake autoconf libtool gettext-dev"
-subpackages="$pkgname-doc"
-source="http://alpine.x10host.com/alpine/release/src/alpine-$pkgver.tar.xz
+subpackages="$pkgname-dbg $pkgname-doc"
+source="$pkgname-$pkgver.tar.gz::https://repo.or.cz/alpine.git/snapshot/v$pkgver.tar.gz
 	uclibc-musl.patch
+	0001-ssl_unix-fix-server-name-validation.patch
 	"
+builddir="$srcdir/$pkgname-v$pkgver-$_commit"
 
 
 prepare() {
@@ -38,5 +39,6 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="7737dce02ac94170948df7fccb61380c6cb101190e37f5b3ba281d573f54df1db24569d177b460f49bfff381a922be2e4b0f3a0f1a213d88a64d361aedc3c4f1  alpine-2.22.tar.xz
-1b14352571dd12749bbb6ebc1fd468dbb5a8e4d7a27e87f5baeb00a60d5c1a016d925c6bc776da7e1dbf0ad8d799a65049b64774113274d7ffb07c7b1b196775  uclibc-musl.patch"
+sha512sums="5d10c68374337dbaed9a8dcca91a17a20dfe240a13b28107574a8e37db70eaf3c959654c7f8ffc2d4292f643f4ea64344718bc8eda9fc5cda9955337f58aa7c3  alpine-2.22.tar.gz
+1b14352571dd12749bbb6ebc1fd468dbb5a8e4d7a27e87f5baeb00a60d5c1a016d925c6bc776da7e1dbf0ad8d799a65049b64774113274d7ffb07c7b1b196775  uclibc-musl.patch
+5e10289f292139bf576e40bda0f3539d62024309650473a2fdbb281e5d7691cc4c1d3d21f78615e2c900766eddba076f512d92f60d4fbb61e1683f35cba185aa  0001-ssl_unix-fix-server-name-validation.patch"
