testing/sslh: enable on all arches
valgrind is needed only for tests which are disabled anyway.

--- a/testing/sslh/APKBUILD
+++ b/testing/sslh/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.20
 pkgrel=1
 pkgdesc="Applicative Protocol Multiplexer (e.g. share SSH and HTTPS on the same port)"
 url="http://www.rutschle.net/tech/sslh/README.html"
-arch="all !aarch64 !s390x"  # limited by valgrind
+arch="all"
 license="GPL-2.0-or-later"
 makedepends="libconfig-dev libcap-dev pcre-dev perl"
 checkdepends="perl-conf-libconfig perl-io-socket-inet6 lcov valgrind"
