--- a/testing/py3-humanize/APKBUILD
+++ b/testing/py3-humanize/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Thomas Boerger <thomas@webhippie.de>
 pkgname=py3-humanize
 _pkgname=humanize
-pkgver=1.0.0
+pkgver=2.0.0
 pkgrel=0
 pkgdesc="Python humanize functions"
 url="https://pypi.python.org/pypi/humanize"
@@ -10,7 +10,7 @@ arch="noarch"
 license="MIT"
 depends="python3"
 makedepends="py3-setuptools py3-setuptools_scm"
-checkdepends="py3-mock py3-freezegun"
+checkdepends="py3-mock py3-freezegun py3-pytest"
 source="$_pkgname-$pkgver.tar.gz::https://github.com/jmoiron/humanize/archive/$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
@@ -30,4 +30,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="bf8ec28e3e109a5a7c98c8fd515e3285c960bb532a672b2cc43998922e48a151baf3bada977f18affe4d5d1873ff7724f6eb024f5b2e860efa57a43a08924521  humanize-1.0.0.tar.gz"
+sha512sums="95b3d400124ddf619d913fa6995bf07176b79dbfd55bd3f4c242b0493bf9c7d7c8c5a29a20d93aed161234e193925116370157b0ee5cf2ca3155cfad36ad63ea  humanize-2.0.0.tar.gz"
