--- a/testing/sslh/APKBUILD
+++ b/testing/sslh/APKBUILD
@@ -12,6 +12,7 @@ checkdepends="perl-conf-libconfig perl-io-socket-inet6 lcov valgrind"
 subpackages="$pkgname-doc $pkgname-openrc"
 source="http://www.rutschle.net/tech/$pkgname/$pkgname-v$pkgver.tar.gz
 	generate-version.patch
+	fix-make-install.patch
 	$pkgname.conf
 	$pkgname.initd
 	$pkgname.confd
@@ -36,10 +37,6 @@ check() {
 package() {
 	make DESTDIR="$pkgdir" PREFIX=/usr install
 
-	install -p sslh-select "$pkgdir/usr/sbin/sslh-select"
-	mv "$pkgdir/usr/sbin/sslh" "$pkgdir/usr/sbin/sslh-fork"
-	ln -s sslh-fork "$pkgdir/usr/sbin/sslh"
-
 	mkdir -p "$pkgdir/etc/$pkgname"
 	cp -r scripts/fail2ban "$pkgdir/etc/$pkgname/"
 
@@ -58,6 +55,7 @@ doc() {
 
 sha512sums="eccaddd5a4299206f195c2f7a78840b2f76f8a0cf10a715b5c72f959ed5d3259fc5ea3db8d398b33f0d556d71268b15c870999d742f83383a9d49120e476770a  sslh-v1.20.tar.gz
 66aa10eb497a8c44e7b852476b8fb9af05d6d786da76557f4b77799f871884531ac98f71313d7d449396fb02205b5a6248e957cecee7efaf7d17d69850dc88cf  generate-version.patch
+b82d3c799f0cdf183fe0545e1d2b4f142070112d7ec3594afd709608c4893c300122aa32026dd7f8e782eb3981bf85fc02f878e2613ddfe014f39bbb94fb441e  fix-make-install.patch
 dd2231677d3e3f371ef643ebb9b9e31effc058ac7b430fe17dfb801b23040c6bde7b6c7c6b0ff6757607207a506096334b0a8e7ce83c884d483717c338a3499c  sslh.conf
 ba0a0fe8785ab9963d4dc11c39d6cbd41fe14d1e8f6d61eb0bf6eb2855e4f2de119b76f82894f3d52a91467ee83f4bd805d8eafc3c7da7b5a4f630cc4a241462  sslh.initd
 580114cef9356d66ec1e6c306837d44dc3098e8f3f805eda20c5d8f81f087bf295b25801ee64ee2bc667ce7324f510ff6f4fc7e222d1431ec3d4e82bbcfb160f  sslh.confd"
