testing/sslh: move fail2ban files to subpkg and install to correct location

--- a/testing/sslh/APKBUILD
+++ b/testing/sslh/APKBUILD
@@ -2,17 +2,18 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=sslh
 pkgver=1.20
-pkgrel=1
+pkgrel=2
 pkgdesc="Applicative Protocol Multiplexer (e.g. share SSH and HTTPS on the same port)"
 url="http://www.rutschle.net/tech/sslh/README.html"
 arch="all"
 license="GPL-2.0-or-later"
 makedepends="libconfig-dev libcap-dev pcre-dev perl"
 checkdepends="perl-conf-libconfig perl-io-socket-inet6 lcov valgrind"
-subpackages="$pkgname-doc $pkgname-openrc"
+subpackages="$pkgname-fail2ban::noarch $pkgname-doc $pkgname-openrc"
 source="http://www.rutschle.net/tech/$pkgname/$pkgname-v$pkgver.tar.gz
 	generate-version.patch
 	fix-make-install.patch
+	fail2ban.patch
 	$pkgname.conf
 	$pkgname.initd
 	$pkgname.confd
@@ -37,12 +38,21 @@ check() {
 package() {
 	make DESTDIR="$pkgdir" PREFIX=/usr install
 
-	mkdir -p "$pkgdir/etc/$pkgname"
-	cp -r scripts/fail2ban "$pkgdir/etc/$pkgname/"
-
 	install -D -m755 "$srcdir/$pkgname.initd" "$pkgdir/etc/init.d/$pkgname"
 	install -D -m644 "$srcdir/$pkgname.confd" "$pkgdir/etc/conf.d/$pkgname"
 	install -D -m644 "$srcdir/$pkgname.conf" "$pkgdir/etc/$pkgname/$pkgname.conf"
+}
+
+fail2ban() {
+	install_if="$pkgname=$pkgver-r$pkgrel fail2ban"
+
+	cd "$builddir"
+
+	install -D -m644 scripts/fail2ban/sslh-ssh.conf \
+		"$subpkgdir"/etc/fail2ban/filter.d/sslh-ssh.conf
+
+	install -D -m644 scripts/fail2ban/jail.conf \
+		"$subpkgdir"/etc/fail2ban/jail.d/sslh-ssh.conf
 }
 
 doc() {
@@ -56,6 +66,7 @@ doc() {
 sha512sums="eccaddd5a4299206f195c2f7a78840b2f76f8a0cf10a715b5c72f959ed5d3259fc5ea3db8d398b33f0d556d71268b15c870999d742f83383a9d49120e476770a  sslh-v1.20.tar.gz
 66aa10eb497a8c44e7b852476b8fb9af05d6d786da76557f4b77799f871884531ac98f71313d7d449396fb02205b5a6248e957cecee7efaf7d17d69850dc88cf  generate-version.patch
 b82d3c799f0cdf183fe0545e1d2b4f142070112d7ec3594afd709608c4893c300122aa32026dd7f8e782eb3981bf85fc02f878e2613ddfe014f39bbb94fb441e  fix-make-install.patch
+5773ee1d91e099726b614dbe385f2668699d25029fc300b664411c6082e95d3f27df11b9b1489bee3444c81bf941b8db13b4d382343788e47408c593c4531816  fail2ban.patch
 dd2231677d3e3f371ef643ebb9b9e31effc058ac7b430fe17dfb801b23040c6bde7b6c7c6b0ff6757607207a506096334b0a8e7ce83c884d483717c338a3499c  sslh.conf
 ba0a0fe8785ab9963d4dc11c39d6cbd41fe14d1e8f6d61eb0bf6eb2855e4f2de119b76f82894f3d52a91467ee83f4bd805d8eafc3c7da7b5a4f630cc4a241462  sslh.initd
 580114cef9356d66ec1e6c306837d44dc3098e8f3f805eda20c5d8f81f087bf295b25801ee64ee2bc667ce7324f510ff6f4fc7e222d1431ec3d4e82bbcfb160f  sslh.confd"
